fdo#74453: Only adjust tokens for top formula cells of formula group.

Change-Id: Id04387dffac271b3d617da0fbc19c862c929d60a